# VRPOptimizer

./: .env  .pylintrc  README.md  pyproject.toml  requirements-current.txt  requirements-dev.txt  requirements.txt  setup.py
#/: pyvenv.cfg
3.11/: pyvenv.cfg
Create/: pyvenv.cfg
Python/: pyvenv.cfg
a/: pyvenv.cfg
config/: logging.yaml  settings.yaml
data/: vrp_optimizer.db
docs/: api.md  setup.md  usage.md
new/: pyvenv.cfg
scripts/: init_db.py  run_test.sh  run_tests.sh  setup.sh  start_api.sh  start_ui.sh  test_db_connection.py
src/: __init__.py  system.py
src/api/: __init__.py  dependencies.py  routes.py  schemas.py
src/core/: __init__.py  async_utils.py  config.py  exceptions.py  models.py  settings.py
src/database/: __init__.py  database.py  migrations.py  models.py  operations.py  setup.py
src/monitoring/: __init__.py  logging_config.py  monitoring.py  system.py
src/routes/: routes.py
src/services/: __init__.py  base_service.py  business_intelligence_service.py  cache_manager.py  custom_constraint_manager.py  data_service.py  geocoding_service.py  optimization_service.py  visualization_service.py
templates/: index.html  shipment_template.xlsx
tests/: __init__.py  conftest.py
tests/test_api/: __init__.py  test_routes.py
tests/test_core/: __init__.py  test_models.py
tests/test_services/: __init__.py  test_data_service.py  test_optimization_service.py  test_visualization_service.py
tests/test_ui/: __init__.py
ui/: __init__.py  components.py  main.py  streamlit_app.py
ui/assets/css/: main.css
ui/assets/js/: map_utils.js
with/: pyvenv.cfg
