[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vrp_optimizer"
version = "1.0.0"
description = "Vehicle Route Planning system with LIFO constraints optimization"
authors = [
    { name = "shuddl", email = "spencer@shuddl.io" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Operations Research"
]
dependencies = [
    "pydantic==2.4.2",
    "fastapi==0.104.1",
    "uvicorn==0.23.2",
    "streamlit==1.28.0",
    "ortools==9.6.2534",
    "pandas==2.1.1",
    "openpyxl==3.1.2",
    "python-dotenv==1.0.0",
    "geopy==2.4.0",
    "folium==0.14.0",
    "plotly==5.17.0",
    "prometheus-client==0.17.1",
    "structlog==23.1.0",
    "pyyaml==6.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.2",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.0",
    "mypy==1.6.1",
    "black==23.9.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "ui*"]
namespaces = true

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
include = '.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/", "scripts/"]

[tool.pylint.master]
ignore = ["venv", ".venv", "site-packages", ".git"]
ignore-patterns = [".*\\.pyc", ".*__pycache__.*", ".*\\.egg-info.*"]
